# typographic-linter

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs
src/filters/: curly_apostrophe_filter.rs  ellipsis_symbol_filter.rs  mod.rs  no_space_before_comma_filter.rs  price_filter.rs  quotes_filter.rs  space_before_double_ponctuation_filter.rs
