[package]
name = "typographic_linter"
version = "0.1.0"
description = "Library that checks for common typographic rules in several languages: English, French, German, Italian and Spanish."
keywords = [
    "typography",
    "linter"
]
travis-ci = { repository = "https://github.com/rlustin/typographic-linter", branch = "master" }
readme = "README.md"
repository = "https://github.com/rlustin/typographic-linter"
license = "MIT"
authors = ["Raphaël Lustin <raphael@lustin.fr>"]

[dependencies]
regex = "0.2.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
